Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77163

QMediaPlayer crashes when object is in secondary thread

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.13.2, 5.14.0 Alpha
    • 5.12.4
    • Multimedia
    • None
    • Windows
    • cb06ede8ba9a33adbbfdc690faa1a83be4e70b55 (qt/qtmultimedia/5.13)

      This is a MinGW build, cross-built from Linux to Windows. If the commented out line in the example file is enabled I see a crash in the DirectShow plugin. I sadly can't provide any debug info because of the cross-nature of this setup, I just can't get gdb to show anything sensible and WinDbg does not understand the MinGW debug information.

      If you try this and can't reproduce it: try other machines. I can't reproduce it on one Win7 and one Win10 machine I have around either, but my customer can reproduce it on both Win7 and Win10, on 3 out of 4 machines.

      You don't need to have the test.wav file around, I actually don't have that either, it crashes also without this. If it does not crash it shows:

      DirectShowPlayerService::doSetUrlSource: Unresolved error code 0x80040216 ()
      

      This is probably another bug, but maybe you find it when looking into this one

        For Gerrit Dashboard: QTBUG-77163
        # Subject Branch Project Status CR V

            valentyn.doroshchuk Valentyn Doroshchuk
            rebemlix Rolf Eike Beer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes