src/plugins/directshow/player/directshowplayerservice.cpp
@@ -327,6 +327,7 @@ void DirectShowPlayerService::load(const QMediaContent &media, QIODevice *stream
             0x36b73882, 0xc2c8, 0x11cf, {0x8b, 0x46, 0x00, 0x80, 0x5f, 0x6c, 0xef, 0x60} };
         m_graphStatus = Loading;
 
+        DirectShowUtils::CoInitializeIfNeeded();
         m_graph = com_new<IFilterGraph2>(CLSID_FilterGraph, iid_IFilterGraph2);
         m_graphBuilder = com_new<ICaptureGraphBuilder2>(CLSID_CaptureGraphBuilder2, IID_ICaptureGraphBuilder2);
 
@@ -664,6 +665,7 @@ void DirectShowPlayerService::releaseGraph()
         ::SetEvent(m_taskHandle);
 
         m_loop->wait(&m_mutex);
+        DirectShowUtils::CoUninitializeIfNeeded();
     }
 }
 
